--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -26,7 +26,6 @@ steps:
     action: 'Create Or Update Resource Group'
     resourceGroupName: 'AKS'
     location: 'UK South'
-    templateLocation: 'Linked artifact'
-    csmFile: 'templates\aks\cluster.bicep'
-    csmParametersFile: 'templates\aks\cluster.bicepparam'
+    csmFile: '/templates/aks/cluster.bicep'
+    csmParametersFile: '/templates/aks/cluster.bicepparam'
     deploymentMode: 'Validation'
