--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
@@ -10,15 +5,8 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-
 - task: AzureResourceManagerTemplateDeployment@3
+  displayName: 'Validate Template'
   inputs:
     deploymentScope: 'Resource Group'
     azureResourceManagerConnection: 'MSDN Subcription'
@@ -29,3 +17,16 @@ steps:
     csmFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicep'
     csmParametersFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicepparam'
     deploymentMode: 'Validation'
+
+- task: AzureResourceManagerTemplateDeployment@3
+  displayName: 'Deploy Template'
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'MSDN Subcription'
+    subscriptionId: '967d4b58-56c6-4522-80bb-36142c2a0217'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'AKS'
+    location: 'UK South'
+    csmFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicep'
+    csmParametersFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicepparam'
+    deploymentMode: 'Incremental'
