``` No code changes detected. ```

--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -12,7 +12,7 @@ steps:
     azureResourceManagerConnection: 'MSDN Subcription'
     subscriptionId: '967d4b58-56c6-4522-80bb-36142c2a0217'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'AKS'
+    resourceGroupName: 'DEVAKSRG01'
     location: 'UK South'
     csmFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicep'
     csmParametersFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicepparam'
@@ -25,7 +25,7 @@ steps:
     azureResourceManagerConnection: 'MSDN Subcription'
     subscriptionId: '967d4b58-56c6-4522-80bb-36142c2a0217'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'AKS'
+    resourceGroupName: 'DEVAKSRG01'
     location: 'UK South'
     csmFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicep'
     csmParametersFile: '$(Pipeline.Workspace)/s/templates/aks/cluster.bicepparam'
