Add checkout step to Azure Pipelines YAML for self-checkout before deployment

--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -31,6 +31,7 @@ stages:
           runOnce:
             deploy:
               steps:
+                - checkout: self
                 - task: AzureResourceManagerTemplateDeployment@3
                   displayName: 'Deploy Template'
                   inputs:
