Update infra.yml: change Cleanup stage dependency from Build to Deploy

--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -46,7 +46,7 @@ stages:
                     deploymentMode: 'Incremental'
 
   - stage: Cleanup
-    dependsOn: Build
+    dependsOn: Deploy
     condition: succeeded('Deploy')
     jobs:
       - job: ConfirmDelete
