Update infra.yml: add --yes flag to az group delete command for non-interactive deletion

--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -71,4 +71,4 @@ stages:
               azureSubscription: 'MSDN Subcription'
               scriptType: 'pscore'
               scriptLocation: 'inlineScript'
-              inlineScript: 'az group delete --name "DEVAKSRG01"'
+              inlineScript: 'az group delete --name "DEVAKSRG01" --yes'
