Update infra.yml: add dependency for Delete job on ConfirmDelete stage

--- a/.azure-devops/infra.yml
+++ b/.azure-devops/infra.yml
@@ -64,6 +64,7 @@ stages:
             onTimeout: 'reject'
 
       - job: Delete
+        dependsOn: ConfirmDelete
         steps:
           - task: AzureCLI@2
             displayName: Delete all resources
